parse request + add protocol

--- a/app/design/adminhtml/default/default/template/netzarbeiter/customerregip/customer/tab/view/regip.phtml
+++ b/app/design/adminhtml/default/default/template/netzarbeiter/customerregip/customer/tab/view/regip.phtml
@@ -36,6 +36,12 @@
                 </td>
             </tr>
             <tr>
+                <td><strong><?php echo $this->__('Protocol:') ?></strong></td>
+                <td>
+                    <?php echo $this->getCustomerRequestProtocol() ?>
+                </td>
+            </tr>
+            <tr>
                 <td><strong><?php echo $this->__('HTTP Referrer -> Request:') ?></strong></td>
                 <td>
                     <?php echo $this->getCustomerRequestHtml() ?>
